--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
+<html lang="es">
 <head>
     <title>Clave</title>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+     <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <style> 
     html { 
     width:100%; 
