--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Libertad de la persona humana y de los grupos humanos, ya sean instituciones, ra
 
  <!--<p id="timer" class="textcenter">El <a id="ellink" href='https://www.facebook.com/groups/2519726608167407/?ref=bookmarks'>pájaro</a> es la clave</p>   -->
 
-<form name="formulario" method="link" action="https://www.facebook.com/groups/2519726608167407/?ref=bookmarks" class="textcenter"   >
+<form name="formulario" method="link" action="https://www.facebook.com/groups/405158603748361/learning_content/" class="textcenter"   >
 
   <!-- Modelo de coche
        Campo obligatorio, opciones posibles: A1, A3, A4 y A15
