--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 Libertad de la persona humana y de los grupos humanos, ya sean instituciones, razas o naciones, y en todos sus aspectos, es decir, libertad de pensamiento y de movimientos. Igualdad de derechos y obligaciones de los individuos y grupos humanos sin distinción de religión, raza o nacionalidad. Fraternidad de todos los hombres y de todos los pueblos y naciones; porque todos los seres humanos nacen libres e iguales en derecho y en dignidad. Un alto espiritu de fraternidad inspira los actos de la Masoneria.
 </p>
 
-<form name="formulario" method="link" action="https://www.facebook.com/groups/405158603748361/learning_content/" class="textcenter"   >
+<form name="formulario" method="link" action="https://www.facebook.com/groups/405158603748361/?epa=SEARCH_BOX" class="textcenter"   >
 
   <!-- Modelo de coche
        Campo obligatorio, opciones posibles: A1, A3, A4 y A15
