--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ Libertad de la persona humana y de los grupos humanos, ya sean instituciones, ra
        Sólo se permiten letras y números -->
   <input type="text" name="clave" placeholder="Su respuesta"
          required pattern="libertad-igualdad-fraternidad|libertad-fraternidad-igualdad|igualdad-libertad-fraternidad|igualdad-fraternidad-libertad|fraternidad-igualdad-libertad|fraternidad-libertad-igualdad"
-         title="escriba las 3 palabras clave. Ejemplos: a-b-c ; b-c-a" >
+         title="escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: a-b-c ; b-c-a" >
 </form>
 
 
