--- a/index.html
+++ b/index.html
@@ -135,13 +135,20 @@ Libertad de la persona humana y de los grupos humanos, ya sean instituciones, ra
 </p>
 
 <form name="formulario" method="link" action="https://www.facebook.com/groups/405158603748361/?epa=SEARCH_BOX" class="textcenter"   >
-
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<br></br>
+<p>escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: palabra-palabra-palabra</p>
   <!-- Modelo de coche
        Campo obligatorio, opciones posibles: A1, A3, A4 y A15
        Sólo se permiten letras y números -->
   <input type="text" name="clave" placeholder="Su respuesta"
          required pattern="libertad-igualdad-fraternidad|libertad-fraternidad-igualdad|igualdad-libertad-fraternidad|igualdad-fraternidad-libertad|fraternidad-igualdad-libertad|fraternidad-libertad-igualdad"
-         title="escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: a-b-c ; b-c-a" >
+         title="escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: palabra-palabra-palabra" >
 </form>
 
 
