--- a/index.html
+++ b/index.html
@@ -130,23 +130,18 @@
 
 
 
-<p id="timer" class="textcenter">
+<p class="textcenter">
 Libertad de la persona humana y de los grupos humanos, ya sean instituciones, razas o naciones, y en todos sus aspectos, es decir, libertad de pensamiento y de movimientos. Igualdad de derechos y obligaciones de los individuos y grupos humanos sin distinción de religión, raza o nacionalidad. Fraternidad de todos los hombres y de todos los pueblos y naciones; porque todos los seres humanos nacen libres e iguales en derecho y en dignidad. Un alto espiritu de fraternidad inspira los actos de la Masoneria.
 </p>
 
 <form name="formulario" method="link" action="https://www.facebook.com/groups/405158603748361/?epa=SEARCH_BOX" class="textcenter"   >
 <br></br>
 <br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<br></br>
-<p>escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: palabra-palabra-palabra</p>
+<p  style="font-size: 20">escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: palabra-palabra-palabra</p>
   <!-- Modelo de coche
        Campo obligatorio, opciones posibles: A1, A3, A4 y A15
        Sólo se permiten letras y números -->
-  <input type="text" name="clave" placeholder="Su respuesta"
+  <input type="text" name="clave" placeholder="Su respuesta"  style="font-size: 20"
          required pattern="libertad-igualdad-fraternidad|libertad-fraternidad-igualdad|igualdad-libertad-fraternidad|igualdad-fraternidad-libertad|fraternidad-igualdad-libertad|fraternidad-libertad-igualdad"
          title="escriba las 3 palabras clave usando sólo minúsculas e intercalándolas con un (-). Ejemplos: palabra-palabra-palabra" >
 </form>
